--- a/edgar.html
+++ b/edgar.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Edgar Degas</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <h1>Edgar Degas</h1>
 
+    <img style="float: left; margin: 30px;" src="ed1.jpg" alt="Edgar Degas"><h3>Biografía</h3> 
+    <p>Edgar Degas nació en París en 1834 en una familia rica y culta. Empezó la carrera de Derecho, pero pronto la abandonó para dedicarse a la pintura.
+        Fue alumno de Louis Lamothe, un discípulo de Ingres. Completó su formación con visitas al Louvre y con viajes a Italia, donde estudió a los grandes maestros del Renacimiento.
+Dada su gran admiración por Ingres, comenzó pintando temas históricos como por ejemplo Las muchachas espartanas provocando a la lucha a sus compañeros. Aquí representa a las jóvenes de la antigua Esparta que incitan a los jóvenes a pelear contra ellas y se observa ya su preocupación por la luz y el movimiento.
+<br><br>
+A partir de 1865, influido por el movimiento impresionista, abandonó los temas académicos para dedicarse a una temática contemporánea. Amigo de Pisarro, Renoir, Monet y Manet, participó en siete de las ocho exposiciones del grupo. A éstos le unía el deseo de representar el instante, lo espontáneo, pero le separaba, el rechazo de la pintura al aire libre. Degas prefería trabajar en su taller, no se interesó por el paisaje ni por plasmar los efectos del cambio de la luz y la atmósfera. Le interesaba representar la vida moderna, centrándose en el ser humano y especialmente en la mujer.
+<br><br>
+La preocupación por captar el movimiento con fidelidad, le llevó a obsesionarse con temas como las bailarinas o las carreras de caballos. Estudió a las bailarinas desde el punto de vista del espectador, tras el escenario, en el escenario, en los descansos y en los ensayos.
+    </p>
+    <h3>Pinturas</h3>
+
+    <h4>La clase de danza (1874)</h4>
+    <center><img src="ed2.jpg" alt="La clase de danza" style="width: 30%;"></center>
+    <br>
+    <h4>La pequeña bailarina de 14 años (1881)</h4>
+    <center><img src="ed3.jpg" alt="La pequeña bailarina de 14 años" style="width: 25%;"></center>
+    <br>
+    <h4>Bailarinas en azul (1897)</h4>
+    <center><img src="ed4.jpg" alt="Bailarinas en azul" style="width: 30%;"></center>
+    <h4>La familia Bellelli (1862)</h4>
+    <center><img src="ed5.jpg" alt="La familia Bellelli" style="width: 35%;"></center>
+    <h4>La Orquesta de la Ópera o Los músicos de la orquesta (1870)</h4>
+    <center><img src="ed6.jpg" alt="La Orquesta de la Ópera o Los músicos de la orquesta" style="width: 30%;"></center>
+<br>
+<a href="index.html"><h2>Ir al menú</h2></a>
+</body>
+</html>
