--- a/monet.html
+++ b/monet.html
@@ -1,1 +1,67 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Claude Monet</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <h1>Claude Monet</h1>
 
+    <img style="float: left; margin: 30px; width: 20%;" src="cm1.jpg" alt="Claude Monet"><h3>Biografía</h3>
+    <p>Claude Monet nació el 14 de noviembre de 1840 en el quinto piso de 45 rue Laffitte, en el distrito 9 de París.
+
+        Fue el segundo hijo de Claude Adolphe Monet, empresario, y Louise Justine Aubrée Monet, cantante.
+        
+        El 20 de mayo de 1841, fue bautizado en la iglesia parroquial, Notre-Dame-de-Lorette, como Oscar-Claude, pero sus padres lo llamaban simplemente Oscar. Pese a ser bautizado como católico, se convertiría en ateo.
+    <br>
+    En 1845, su familia se trasladó a Le Havre, en Normandía, donde se crio y donde cursó estudios de dibujo y pintó marinas junto a Eugène Louis Boudin. Ganó algo de dinero dibujando caricaturas.
+
+    En 1855, a los quince años, gozaba ya de cierta reputación como caricaturista. En 1857, con diecisiete, vió morir a su madre. Un año después, en 1858, participó por primera vez en la Exposition Municipale du Havre, celebrada ente los meses de agosto y octubre, con el cuadro titulado Vue prise à Rouelles, fechado en ese mismo año.
+<br><br>
+Con el apoyo de su padre y de su tía Jeanne-Marie Lecadre, que le recomienda al pintor Armand Gautier, viajó a París en 1859. Allí acudió a una academia libre, la Académie Suisse, donde dispuso de modelos para ejercitarse en el dibujo de figuras y se unió a un pequeño grupo de jóvenes pintores.
+
+Su familia renuncia a pagarle su reemplazo en el servicio militar, viéndose así interrumpido su aprendizaje artístico al partir hacia Argelia en la primavera de 1861. Un año después cayó enfermo y fue repatriado hacia Francia para una convalecencia de seis meses, asumiendo su tía los gastos de su reemplazo en la milicia durante los cinco años que aún le restan por cumplir.
+Ingresa en el estudio Gleyre, donde conoció a Bazille, Renoir y Sisley. Frecuentaría este estudio hasta el invierno de 1863-64.
+
+El 8 de agosto de 1867, nació su primer hijo, Jean, ignorado por la familia del pintor. En mayo de 1868 vive en Fécamp con su mujer Camille y su hijo. Su situación familiar es muy difícil y tras un fallido intento de suicidio en el mes de junio, recibe ayuda económica de Gaudibert. En ese mismo verano se traslada a El Havre, donde es condecorado con la medalla de plata de la Exposition Maritime Internationale du Havre.
+
+Monet se casa con Camille el 26 de junio de 1870 y se trasladan a Normandía, a Trouville, donde son sorprendidos por la declaración de la guerra franco-prusiana. Monet, de ideas republicanas, no desea luchar por su Imperio y viaja a Londres. Allí, y tras enterarse de la muerte de su tía y protectora Jeanne-Marie el 7 de julio, se encontrará con Camille Pissarro, Sisley y Daubigny. Gracias a este último Monet entra en contacto con el marchante parisino Durand-Ruel. Así, a partir del mes de septiembre una obra del artista figurará en la exposición organizada por dicho marchante en Londres.
+
+Tras la muerte de su padre, ocurrida el 17 de enero de 1871, Monet abandonaría Londres a finales de mayo camino de Holanda. Fascinado por sus paisajes se instala en Zaandam, ciudad próxima a Ámsterdam, donde permanece hasta el mes de octubre ya que, una vez terminada la guerra, regresa a París.
+
+Pintaba al aire libre paisajes y escenas de la sociedad burguesa, y gozó de cierto éxito en las exposiciones oficiales. Según su estilo evolucionaba, transgredía los convencionalismos en beneficio de una expresión artística más directa.
+<br><br>
+En 1874, junto a sus colegas, organizan sus propias exposiciones. Se autodenominaron los independientes, aunque se les aplicó burlonamente la etiqueta de impresionistas a causa del aspecto inacabado de sus obras (como una primera impresión) y también porque una de las pinturas de Monet llevaba el título Impresión: sol naciente (1872, Museo Marmottan, París).
+
+Intentó captar las variaciones del color a través de sus series sobre un mismo tema, a distintas horas o durante estaciones diferentes. Paulatinamente fue acentuando los efectos luminosos hasta llegar en ocasiones a difuminar las formas o incluso a fundirlas entre sí.
+
+En 1878 Monet se establece provisionalmente en París, donde el 17 de marzo de este año nació su segundo hijo, Michel, hecho que quebrantará definitivamente la salud de su mujer. La muerte de Camille el 5 de septiembre de 1879 lo dejó sin saber cómo organizar su vida y la de sus hijos.
+
+A mediados de la década de 1880 está considerado como el dirigente de la escuela impresionista alcanzando el reconocimiento y una buena posición económica. Valorado como maestro de la observación meticulosa.
+
+En 1890 adquirió una propiedad en el pueblo de Giverny, cerca de París, y allí comenzó a construir un nuevo jardín (hoy abierto al público) -un estanque con nenúfares atravesado por un puente japonés colgante con sauces y matas de bambú-.
+<br><br>
+El 16 de julio de 1892 se casa con Alice Hoschedé. En 1906 comienza a pintar las series del estanque con nenúfares que están expuestas en la Orangerie de París, en el Instituto de Arte de Chicago y en el Museo de Arte Moderno de Nueva York.
+
+Claude Monet continuó pintando, a pesar de que la vista le fallaba, casi hasta el momento de su muerte de cáncer de pulmón, el 5 de diciembre de 1926 en Giverny. Fue enterrado en el cementerio de la iglesia.</p>
+
+<h3>Pinturas</h3>
+
+    <h4>Bulevar de los Capuchinos (1873)</h4>
+    <center><img src="cm2.webp" alt="Bulevar de los Capuchinos" style="width: 20%;"></center>
+    <br>
+    <h4>El acantilado, Etretat, Atardecer (1882-83)</h4>
+    <center><img src="cm3.webp" alt="El acantilado, Etretat, Atardecer" style="width: 30%;"></center>
+    <br>
+    <h4>Álamos, Otoño (1891)</h4>
+    <center><img src="cm4.webp" alt="Álamos, Otoño" style="width: 25%;"></center>
+    <h4>El Gran Canal, Venecia (1908)</h4>
+    <center><img src="cm5.webp" alt="El Gran Canal, Venecia" style="width: 35%;"></center>
+    <h4>Brazo del Sena cerca de Giverny (1897)</h4>
+    <center><img src="cm6.webp" alt="Brazo del Sena cerca de Giverny" style="width: 30%;"></center>
+<br>
+    <a href="index.html"><h2>Ir al menú</h2></a>
+</body>
+</html>
