--- a/pierre.html
+++ b/pierre.html
@@ -1,1 +1,53 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pierre-Auguste Renoir</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <h1>Pierre-Auguste Renoir</h1>
 
+    <img style="float: left; margin: 30px; width: 20%;" src="pi1.jpg" alt="Pierre-Auguste Renoir"><h3>Biografía</h3>
+    <p>(Limoges, 1841 - Cagnes-sur-Mer, 1919) Pintor francés, una de las más destacadas figuras del impresionismo, tendencia de la que se distanciaría para seguir una línea personal. Hijo de artesanos, vivió sus primeros años en barrios proletarios donde trabajó como decorador de porcelanas y pintor de abanicos. Después pudo acceder al taller del pintor Gilbert y, luego, al de Gleyre, donde conoció a Claude Monet, Frédéric Bazille y Alfred Sisley, con quien más tarde compartió su casa en París.
+        <br><br>
+        Sus primeros intereses como pintor se inclinaron por la escuela de Barbizon y, consecuentemente, por la pintura al aire libre. Durante los días agitados de la Comuna, pintó con Monet a orillas del Sena. En 1873 terminó Jinetes en el bosque de Bolonia, excluida del Salón oficial y expuesta en el de los Rechazados. Durand-Ruel se interesó por su obra y en 1874 participó en la primera exposición impresionista, en los estudios del fotógrafo Nadar.
+
+        Allí expuso, entre otras obras, El palco (1874, Courtauld Institute Galleries, Londres). Se trata de un gran lienzo donde representa a Niní López y a su hermano con una técnica de pinceladas sueltas fundidas entre sí, de contornos imprecisos y poco definidos. La composición, piramidal, se caracteriza por los ritmos ascendentes y sinuosos del vestido negro de ella y los de la chaqueta de él, así como señala la importancia de las cabezas: la de ella expresa serenidad y atención, mientras que la de él oculta su mirada tras los prismáticos.
+        <br><br>
+        En 1876 se celebró la segunda exposición del grupo impresionista en la que Renoir participó con una de sus obras más conocidas, El moulin de la Galette (1876, Museo de Orsay, París), que recoge los momentos de un baile al aire libre en una terraza parisiense. Si lo comparamos con la obra de Manet Concierto en las Tullerías (1860, National Gallery, Londres), de tema y composición parecidos, presenta al igual que ésta un encuadre interrumpido por los bordes del formato, recurso que produce la impresión de que la escena sigue y se expande más allá de los propios límites del lienzo. En comparación con la obra de Manet, que la pintó en un alarde de pinceladas imprecisas e indefinidas, la de Renoir libera todavía más la pintura, con una sucesión de manchas centelleantes que parece deslizarse sobre la tela al ritmo de la música o de los movimientos de los árboles que dejan pasar parcialmente la luz que ilumina la escena.
+        <br><br>
+        En 1878, Renoir se alejó del grupo impresionista y buscó el éxito en los salones oficiales; el abandono de los principios impresionistas se acentuó cuando, a partir de 1881, numerosos viajes (Normandía, Argel, Florencia, Venecia, Roma, Nápoles, Sicilia) despiertan su admiración por cierta idea clásica de lo bello (la pintura pompeyana, Ingres, Rafael Sanzio), que le llevó a cuestionarse el valor de la espontaneidad de su técnica anterior, alejándose progresivamente de los efectos atmosféricos en busca de una pintura más definida. De esta época cabe destacar obras que reflejan momentos de la vida parisiense contemporánea, como el cuadro Madame Charpentier y sus hijos (1878, Metropolitan Museum, Wolf Foundation, Nueva York), que fue expuesto en el Salón de 1879, donde recibió la aprobación del público y la crítica.
+
+El tema de la mujer, por el que el artista mostró claramente, durante toda su vida, un gran interés, adopta, por lo general, un tratamiento de gran consistencia y de resonancias clásicas. En este sentido destacan la serie de las bañistas -Bañista sentada secándose la pierna (1895, Museo de l'Orangerie, París), Bañista sentada (1914, Art Institute, Chicago), o Bañistas (1918-1919, Museo de Orsay, París)- que constituyen el máximo exponente de la belleza femenina, ejecutadas con una técnica cálida y envolvente. En estas obras, las pinceladas no se mueven en múltiples direcciones, como se observava en El moulin de la Galette, sino que se alargan por la aplicación insistente de óleo húmedo diluido en aceite de linaza y trementina.
+<br><br>
+La línea recta no existe en la naturaleza y la mezcla armónica de colores sobre la tela va configurando la forma mediante un proceso orgánico que persigue una expresión sensual y vitalista: "No tengo reglas ni métodos; cualquiera que vea los materiales que empleo o mi forma de pintar, se dará cuenta de que no hay secretos. Miro un desnudo y descubro miles de matices diminutos. He de encontrar aquel que haga que la carne de mi lienzo viva y tiemble."
+
+El ejercicio de la pintura es para Renoir una especie de placer físico, la sublimación de la atracción física por medio de la materia pictórica. Salud y belleza se identifican en las representaciones de esas mujeres de piel tersa y rosada. El amor por el trabajo manual de este artista, que procedía de una familia de artesanos y que fatalmente vio sus propias manos deformadas por el reuma al final de su vida, le llevó a rechazar cualquier dimensión intelectual de la pintura o cualquier resonancia literaria en favor del trabajo humilde y bien hecho.
+
+En 1884 escribió una propuesta para fundar la "Sociedad de los irregulares", la cual asociaba la belleza a las formas orgánicas e irregulares de la naturaleza y rechazaba el mundo mecánico e industrializado, como años antes hicieron John Ruskin y William Morris, pero cuya sensualidad se alejaba de la religiosidad de éstos. "A veces hablo como los campesinos del sur. Dicen que son unos desafortunados. Yo les pregunto si están enfermos y me dicen que no. Entonces son afortunados; tienen un poco de dinero, por lo tanto, si tienen una mala cosecha no pasan hambre, pueden comer, pueden dormir y tienen un trabajo que les permite estar al aire libre, a la luz del sol. ¿Qué más pueden desear? Son los hombres más felices y ni siquiera lo saben. Después de unos cuantos años más, voy a abandonar los pinceles y dedicarme a vivir al sol. Nada más."
+<br><br>
+Las penurias económicas de Renoir terminaron con el éxito de la exposición impresionista de 1886 en Nueva York. En 1892 realizó una muestra antológica en los salones de Durand-Ruel. Dos años más tarde nació su hijo Jean (el cineasta Jean Renoir), y Gabrielle Renard, prima de su mujer Aline, entró con dieciséis años en la casa del pintor para ayudar en la tareas domésticas, aunque acabó convirtiéndose en su modelo favorita. Jean Renoir escribió: "El espíritu inherente a los niños y niñas, a las criaturas y los árboles, pobladores del mundo que él creó, encerraba tanta pureza como el cuerpo desnudo de Gabrielle. Y finalmente, Renoir revelaba su propio ser a través de esta desnudez."
+
+A partir de ese momento los éxitos se sucedieron. Sin embargo, ni su artritis, que lo llevó a instalarse en la Provenza en busca de un clima más cálido (fue operado en 1910 de las dos rodillas, una mano y un pie), ni el alistamiento de sus hijos Pierre y Jean durante la Primera Guerra Mundial, ni incluso la muerte de su esposa en 1915, lograron disminuir su entusiasmo por la pintura.
+</p>
+
+<h3>Pinturas</h3>
+
+    <h4>Retrato de Irene Cahen (1880)</h4>
+    <center><img src="pi2.jpg" alt="Retrato de Irene Cahen" style="width: 20%;"></center>
+    <br>
+    <h4>El Sena en Asnieres (1875)</h4>
+    <center><img src="pi3.jpg" alt="El Sena en Asnieres" style="width: 30%;"></center>
+    <br>
+    <h4>Niebla en Guernsey (1883)</h4>
+    <center><img src="pi4.jpg" alt="Niebla en Guernsey" style="width: 30%;"></center>
+    <h4>Paisaje en Beaulieu (1899)</h4>
+    <center><img src="pi5.jpg" alt="Paisaje en Beaulieu" style="width: 30%;"></center>
+    <h4>Noirmoutier (1892)</h4>
+    <center><img src="pi6.jpg" alt="Noirmoutier" style="width: 30%;"></center>
+<br>
+    <a href="index.html"><h2>Ir al menú</h2></a>
+</body>
+</html>
