--- a/vincent.html
+++ b/vincent.html
@@ -1,1 +1,52 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vincent van Gogh</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <h1>Vincent van Gogh</h1>
 
+    <img style="float: left; margin: 30px; width: 20%;" src="vin1.jpg" alt="Vincent van Gogh"><h3>Biografía</h3>
+
+    <p>(Groot-Zundert, Países Bajos, 1853 - Auvers-sur-Oise, Francia, 1890) Pintor holandés. En las décadas finales del siglo XIX, el impresionismo marcó el inicio de una profunda renovación de las artes plásticas que tendría continuidad en la sucesión de ismos o corrientes del arte contemporáneo. Algunos de los mejores maestros de este periodo, sin embargo, no pueden encasillarse en ninguna escuela, y abrieron por sí solos nuevos caminos; entre ellos, el holandés Vincent van Gogh ocupa una posición señera.
+        <br><br>
+        Encarnación del artista torturado e incomprendido, Van Gogh no llegó a vender más que uno de aquellos centenares de cuadros suyos que actualmente alcanzan desorbitadas cotizaciones en las subastas. El reconocimiento de su obra no empezó hasta un año después de su muerte, a raíz de una exposición retrospectiva organizada por el Salón de los Independientes; en nuestros días, Van Gogh es considerado unánimemente uno de los grandes genios de la pintura moderna. Su producción ejerció una influencia decisiva en todo el arte del siglo XX, especialmente en el fauvismo y el expresionismo; y tras más de un siglo de experimentos artísticos, la pincelada tosca y atormentada del artista holandés, alimentada por el vigor de su pasión interior, conserva toda su fascinante fuerza expresiva.
+        <br><br>
+        Vincent van Gogh era el mayor de los seis hijos de un pastor protestante, y mantuvo con su hermano Theo, cuatro años menor que él, una relación que sería determinante en su existencia y en su trayectoria artística. La correspondencia que ambos intercambiaron a lo largo de sus vidas testimonia la intimidad de esta relación y las pasiones y angustias humanas y creativas que atormentaron a Van Gogh en sus últimos años. Tras recibir una esmerada educación en un internado privado, a los dieciséis años entró como aprendiz en la filial de La Haya de la galería de arte parisina Goupil, una sociedad de comerciantes de arte fundada por su tío Vincent.
+
+En 1873 pasó a la sucursal de la galería Goupil en Londres, donde hubo de padecer el primero de sus fracasos sentimentales; en 1875 fue trasladado a la filial parisina; en 1876 se despidió y regresó a Holanda. Trabajó después como profesor, ayudante de un pastor metodista y empleado de una librería; ninguno de estos empleos le duró mucho tiempo. Por aquel entonces sentía sobre todo la necesidad espiritual de entregarse a sus semejantes; de hecho, siempre había querido ser pastor, como su padre, y tal vocación lo llevó a Ámsterdam para seguir los estudios de teología, que suspendió.
+
+Pasó entonces a la Escuela de Evangelización Práctica de Bruselas, y en 1878 fue enviado por sus superiores a la zona minera del Borinage. Establecido en el pueblo de Pâturages, próximo a Mons, realizó una serie de dibujos de los mineros. La Escuela de Evangelización lo expulsó por su excesiva implicación: impresionado por sus infrahumanas penurias, Van Gogh llegó a dar a los mineros lo poco que tenía y a vivir más pobremente que ellos.
+<br><br>
+El contacto con tal miseria y desolación socavó su fe, y Van Gogh pasó esta crisis espiritual vagando por Francia y Bélgica y escribiendo a su hermano Theo, que ocupaba ahora su antiguo empleo en la galería Goupil de París. Animado por Theo, en 1880 decidió dedicarse a la pintura y fue a Bruselas, donde conoció al pintor Anthon Van Rappard (con quien mantendría una larga relación) y llevó a cabo las primeras copias de Millet.
+
+Tras otro fracaso sentimental con su prima Kate, conoció a una prostituta llamada Sien, cuyos infortunios despertaron su siempre infinita compasión. En 1882 vivió en Schenkweg con Sien y con sus hijos, que tomó a su cargo; seguía dibujando, y realizó sus primeros cuadros. Tras descubrir Theo su relación con Sien, rompió con ella a instancias de su hermano y marchó al norte, donde permaneció hasta finales de 1883. Fue luego a Nuenen, donde se aproximó de nuevo a su familia y pintó febrilmente; de esos dos años (1884-1885) son sus primeras telas de importancia. Cuadros como Los comedores de patatas (1885), diversas representaciones de tejedores y cabezas y figuras de campesinos forman, junto con innumerables dibujos, el conjunto de obras de esta etapa de formación.
+
+En 1886 se reunió con su hermano en París; allí, en la capital artística de Europa, el contacto con el impresionismo reorientó visiblemente su estilo. Se relacionó con los impresionistas y postimpresionistas en la tienda de colores del "père Tanguy" (de quien pintó el conocido retrato) y descubrió el arte japonés. Su hermano le presentó a Camille Pissarro, Georges Seurat y Paul Gauguin; conoció asimismo a Toulouse-Lautrec y Émile Bernard, y bajo ese nuevo ambiente llegaría a la definición de su pintura. Su paleta se tornó definitivamente clara y colorista y sus composiciones menos tradicionales, dando forma a su personal visión del postimpresionismo.
+    </p>
+
+    <h3>Pinturas</h3>
+
+    <h4>Noche estrellada sobre el Ródano (1888)</h4>
+    <center><img src="vin2.jpg" alt="Noche estrellada sobre el Ródano" style="width: 30%;"></center>
+    <br>
+    <h4>Campo de trigo con cipreses (1889)</h4>
+    <center><img src="vin3.jpg" alt="Campo de trigo con cipreses" style="width: 30%;"></center>
+    <br>
+    <h4>Almendro en flor (1890)</h4>
+    <center><img src="vin4.jpg" alt="Almendro en flor" style="width: 30%;"></center>
+    <h4> La noche estrellada (1889)</h4>
+    <center><img src="vin5.jpg" alt=" La noche estrellada" style="width: 30%;"></center>
+    <h4>Terraza de café por la noche (1888)</h4>
+    <center><img src="vin6.jpg" alt="Terraza de café por la noche" style="width: 20%;"></center>
+<br>
+    <a href="index.html"><h2>Ir al menú</h2></a>
+
+
+
+
+</body>
+</html>
